Fix spacing of commands

--- a/css/main.css
+++ b/css/main.css
@@ -1,43 +1,59 @@
 body {
   background-color: #fdf6e3;
 }
+
 header, footer {
   font-size: 1.5rem;
 }
+
 ul {
   font-family: sans-serif;
 }
+
 .logo {
   text-transform: uppercase;
 }
+
 .wrapper {
   background-color: #eee8d5;
 }
+
 #contents, #favs, #facts, #types {
   color: #93a1a1;
 }
-.wrapper>.dfn + strong {
+
+.wrapper > .dfn {
   background-color: #b58900;
+}
+
+p + strong {
   color: #fff;
 }
-a {
-  background-color: #719e07
+
+a:not(.no-highlight) {
+  background-color: #719e07;
 }
-rel="external" {
+
+[rel="external"] {
   background-color: #2694d8;
 }
-ul li:first-child {
-  color: #719e47
+
+ol li:first-child {
+  color: #719e47;
 }
-ul li:last-child {
-  color: #2aa198
+
+ol li:last-child {
+  color: #2aa198;
 }
-.types>li:nth-child(odd) {
+
+.types > li:nth-child(odd) {
   background-color: #657ba3;
 }
-.types>li:nth-child(even) {
-  background-color: #586e75
+
+.types > li:nth-child(even) {
+  background-color: #586e75;
 }
-.types>li:nth-child(3) {
+
+.types > li:nth-child(3n) {
   background-color: #d04b16;
 }
